prepared for creature enchant rendering

--- a/build.gradle
+++ b/build.gradle
@@ -66,3 +66,10 @@ processResources {
         exclude 'mcmod.info'
     }
 }
+jar {
+
+    manifest {
+
+        attributes 'FMLAT': "${modid}.cfg"
+    }
+}
