--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.jvmargs=-Xmx3G
 
 version = "0.1.0"
 group = "hu.frontrider.thaumicarcana"
-archivesBaseName = "thaumic_arcana"
+modid = "thaumic_arcana"
 
 curse_api_key=a6c35dc8-f139-48a5-a288-af891855b460
 project_id=299946
