finalised 0.1.0, and prepared for CI build

--- a/build.gradle
+++ b/build.gradle
@@ -18,11 +18,11 @@ apply plugin: "com.matthewprenger.cursegradle"
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
 curseforge {
-    apiKey = curse_api_key
+    apiKey = "$System.env.curse_api_key"
     project {
-        id = project_id
+        id =  "$System.env.project_id"
         changelog = file("$changelog")
-        releaseType = release_type
+        releaseType = "$System.env.release_type"
     }
 }
 
@@ -42,7 +42,7 @@ minecraft {
 dependencies {
     testCompile("org.junit.jupiter:junit-jupiter-api:$junit_version")
     testRuntime("org.junit.jupiter:junit-jupiter-engine:$junit_version")
-
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '2.0.2-beta'
     // Enable use of the JUnitPlatform Runner within the IDE
     testCompile("org.junit.platform:junit-platform-runner:$junit_platform_version")
 
