--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ minecraft {
 dependencies {
     testCompile("org.junit.jupiter:junit-jupiter-api:$junit_version")
     testRuntime("org.junit.jupiter:junit-jupiter-engine:$junit_version")
-    testCompile group: 'org.mockito', name: 'mockito-all', version: '2.0.2-beta'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: mockito_version
     // Enable use of the JUnitPlatform Runner within the IDE
     testCompile("org.junit.platform:junit-platform-runner:$junit_platform_version")
 
