--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,8 @@ junit_version=5.2.0
 junit_platform_version=1.2.0
 json_path_version=2.3.0
 mockito_version=2.0.2-beta
+commons_text_version=1.4
+
 
 org.gradle.daemon=true
 org.gradle.jvmargs=-Xmx2g
