added a test to check the validity of language files

--- a/.gitignore
+++ b/.gitignore
@@ -20,10 +20,11 @@ build
 # other
 eclipse
 run
-
-classes
 .
+classes
+.gitignore
 /lib
 *.jar
+logs/
 
-/gradle.properties
+!/gradle/wrapper/gradle-wrapper.jar
