--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,14 @@ junit_platform_version=1.2.0
 json_path_version=2.3.0
 mockito_version=2.0.2-beta
 commons_text_version=1.4
-
+forgelin_version=1.7.4
 
 org.gradle.daemon=true
 org.gradle.jvmargs=-Xmx2g
 org.gradle.configureondemand=true
 org.gradle.parallel=true
 
-version=0.2.1
+version=0.2.2
 group=hu.frontrider.arcana
 modid=thaumic_arcana
 name=Thaumic Arcana
