--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,7 @@ buildscript {
         maven {
             url "https://plugins.gradle.org/m2/"
         }
-        maven {
-            url "http://maven.shadowfacts.net/"
-        }
+
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
@@ -22,18 +20,32 @@ sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse t
 compileJava {
     sourceCompatibility = targetCompatibility = '1.8'
 }
+repositories{
+    jcenter()
+    maven {
+        url "http://maven.shadowfacts.net/"
+    }
+    maven {
+        // location of the maven that hosts JEI files
+        name = "Progwml6 maven"
+        url = "http://dvs1.progwml6.com/files/maven"
+    }
+    maven {
+        // location of a maven mirror for JEI files, as a fallback
+        name = "ModMaven"
+        url = "modmaven.k-4u.nl"
+    }
+}
 
 minecraft {
-    version = "1.12.2-14.23.4.2705"
+    version = "$mc_version-14.23.4.2705"
     runDir = "run"
     mappings = "snapshot_20171003"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
-
-
 dependencies {
-    compile fileTree(dir: 'lib', include: '*.jar')
+    compile group: "net.shadowfacts", name: "Forgelin", version: "1.7.3"
     apiCompileOnly project(":thaumcraftApi")
     implementation files("thaumcraftApi/lib/Thaumcraft-1.12.2-6.1.BETA23-deobf.jar")
 
@@ -44,7 +56,10 @@ dependencies {
     testCompile("org.junit.platform:junit-platform-runner:$junit_platform_version")
     //testCompile("hu.frontrider.minecrafttestkit:minecrafttestkit:0.1")
 
-
+    // compile against the JEI API but do not include it at runtime
+    deobfProvided "mezz.jei:jei_${mc_version}:${jei_version}:api"
+    // at runtime, use the full JEI jar
+    runtime "mezz.jei:jei_${mc_version}:${jei_version}"
 }
 
 processResources {
