--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,9 @@ mockito_version=2.0.2-beta
 commons_text_version=1.4
 forgelin_version=1.7.4
 
+mc_version=1.12.2
+jei_version=4.12.0.216
+
 org.gradle.daemon=true
 org.gradle.jvmargs=-Xmx2g
 org.gradle.configureondemand=true
