--- a/build.gradle
+++ b/build.gradle
@@ -43,11 +43,14 @@ repositories {
         url = "modmaven.k-4u.nl"
     }
 }
-
+configurations {
+    shadow
+    compile.extendsFrom shadow
+}
 minecraft {
     version = "1.12.2-14.23.4.2705"
     runDir = "run"
-    
+
     // the mappings can be changed at any time, and must be in the following format.
     // snapshot_YYYYMMDD   snapshot are built nightly.
     // stable_#            stables are built at the discretion of the MCP team.
@@ -66,7 +69,7 @@ dependencies {
     compile group: "net.shadowfacts", name: "Forgelin", version: "1.7.3"
     apiCompile project(":thaumcraftApi")
     implementation files("thaumcraftApi/lib/Thaumcraft-1.12.2-6.1.BETA23-deobf.jar")
-
+    compile 'org.javadelight:delight-nashorn-sandbox:0.1.16'
     testCompileOnly project(":thaumcraftApi")
     testRuntime files("thaumcraftApi/lib/Thaumcraft-1.12.2-6.1.BETA23-deobf.jar")
 
@@ -80,6 +83,19 @@ dependencies {
     testCompile("com.jayway.jsonpath:json-path:$json_path_version")
     testCompile group: 'org.apache.commons', name: 'commons-text', version: commons_text_version
 
+    //shadowing a required library
+    shadow 'org.javadelight:delight-nashorn-sandbox:0.1.16'
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+    shadow group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    // https://mvnrepository.com/artifact/org.webjars.bower/js-beautify
+    shadow group: 'org.webjars.bower', name: 'js-beautify', version: '1.6.12'
+}
+jar {
+    if (shadow_deps > 0) {
+        from {
+            configurations.shadow.collect { it.isDirectory() ? it : zipTree(it) }
+        }
+    }
 }
 
 processResources {
@@ -90,17 +106,17 @@ processResources {
     // replace stuff in mcmod.info, nothing else
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info'
-                
+
         // replace version and mcversion
-        expand 'version':project.version, 'mcversion':project.minecraft.version
+        expand 'version': project.version, 'mcversion': project.minecraft.version
     }
-        
+
     // copy everything else except the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
     }
 }
 
-test{
+test {
     useJUnitPlatform()
 }
