--- a/gradle.properties
+++ b/gradle.properties
@@ -14,9 +14,10 @@ org.gradle.jvmargs=-Xmx2g
 org.gradle.configureondemand=true
 org.gradle.parallel=true
 
-version=0.3.1
+version=0.3.3
 group=hu.frontrider.arcana
 modid=thaumic_arcana
 name=Thaumic Arcana
 mod_class=hu.frontrider.arcana.ThaumicArcana
 
+shadow_deps=0
