--- a/thaumcraftApi/build.gradle
+++ b/thaumcraftApi/build.gradle
@@ -23,5 +23,11 @@ repositories {
 }
 
 dependencies {
-    compile files("lib/Thaumcraft-1.12.2-6.1.BETA23-deobf.jar")
+    compile files("lib/Thaumcraft-1.12.2-6.1.BETA24-deobf.jar")
 }
+
+runClient.enabled =false
+runServer.enabled =false
+setupDecompWorkspace.enabled =false
+setupDevWorkspace.enabled =false
+cleanCache.enabled =false
