added haste enchant created livium updated research texts
fixed a dependency issue in a subproject

--- a/thaumcraftresearchloader/build.gradle
+++ b/thaumcraftresearchloader/build.gradle
@@ -23,8 +23,8 @@ repositories {
 }
 
 dependencies {
-    compile project(":thaumcraftApi")
-    runtime files("lib/Thaumcraft-1.12.2-6.1.BETA24-deobf.jar")
+    compileOnly project(":thaumcraftApi")
+    compileOnly files("lib/Thaumcraft-1.12.2-6.1.BETA24-deobf.jar")
 }
 
 
