--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,8 @@ commons_text_version=1.4
 forgelin_version=1.7.+
 forge_version=1.12.2-14.23.5.2768
 
+craft_tweaker_version=1.12-4.1.12.507
+
 mc_version=1.12.2
 jei_version=4.12.0.216
 
@@ -15,7 +17,7 @@ org.gradle.jvmargs=-Xmx2g
 org.gradle.configureondemand=true
 org.gradle.parallel=true
 
-version=1.1.1
+version=1.2.0
 group=hu.frontrider.arcana
 modid=thaumic_arcana
 name=Thaumic Arcana
